--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,34 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".LocationApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="com.baidu.location.service_v2.2"></action>
+            </intent-filter>
+        </service>
+
 
         <!-- ???need fix -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="key" />
+            android:value="kDgp7mjAYq5yvAtwKPz0r834LXdOEYZS" />
 
         <activity
             android:name=".MainActivity"
@@ -84,25 +98,23 @@
         </activity>
         <activity
             android:name=".model.ActCreate"
-            android:label="@string/title_activity_act_create"></activity>
+            android:label="@string/title_activity_act_create" />
         <activity
             android:name=".model.ActNewPic"
-            android:label="@string/title_activity_act_new_pic"></activity>
+            android:label="@string/title_activity_act_new_pic" />
         <activity
             android:name=".model.ActNewText"
-            android:label="@string/title_activity_act_new_text"></activity>
+            android:label="@string/title_activity_act_new_text" />
         <activity
             android:name=".model.ActNewAudio"
-            android:label="@string/title_activity_act_new_audio"></activity>
+            android:label="@string/title_activity_act_new_audio" />
         <activity
             android:name=".model.ActNewVideo"
-            android:label="@string/title_activity_act_new_video"></activity>
+            android:label="@string/title_activity_act_new_video" />
         <activity
             android:name=".model.ActNewTrace"
-            android:label="@string/title_activity_act_new_trace"></activity>
-        <activity
-            android:name=".model.AbsActNewMedia"
-            android:label="@string/title_activity_abs_act_new_media"></activity>
+            android:label="@string/title_activity_act_new_trace" />
+
     </application>
 
 </manifest>
