--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <!--pic model-->
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:name=".LocationApplication"
@@ -77,7 +80,7 @@
             android:name=".test.TestFile"
             android:label="@string/title_activity_test_file"></activity>
         <activity
-            android:name=".model.ActCreate"
+            android:name=".modle.Act.ActCreate"
             android:label="@string/title_activity_act_create"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
@@ -87,23 +90,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".model.ActNewPic"
+            android:name=".modle.Act.ActNewPic"
             android:label="@string/title_activity_act_new_pic" />
         <activity
-            android:name=".model.ActNewText"
+            android:name=".modle.Act.ActNewText"
             android:label="@string/title_activity_act_new_text" />
         <activity
-            android:name=".model.ActNewAudio"
+            android:name=".modle.Act.ActNewAudio"
             android:label="@string/title_activity_act_new_audio" />
         <activity
-            android:name=".model.ActNewVideo"
+            android:name=".modle.Act.ActNewVideo"
             android:label="@string/title_activity_act_new_video" />
         <activity
-            android:name=".model.ActNewTrace"
+            android:name=".modle.Act.ActNewTrace"
             android:label="@string/title_activity_act_new_trace" />
-        <activity android:name=".test.ActTestViewPager">
-
-        </activity>
+        <activity android:name=".test.ActTestViewPager" />
+        <activity
+            android:name=".modle.Act.pic.CameraActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
